--- a/.github/workflows/run-postman-collection.yml
+++ b/.github/workflows/run-postman-collection.yml
@@ -13,45 +13,46 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        # This step checks out the code from the repository to the runner.
+        # Check out the code from the repository.
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '21'
-        # This step sets up Node.js version 21 on the runner.
+        # Set up Node.js version 21.
 
       - name: Install Newman and HTML Reporter
         run: npm install -g newman newman-reporter-html
-        # This step installs Newman and the HTML reporter globally using npm.
+        # Install Newman and the HTML reporter globally.
 
       - name: Run Postman Collection and generate HTML report
         id: run_postman
         run: |
           mkdir -p rdw-test-results
           TIMESTAMP=$(date +"%Y%m%d%H%M%S")
-          REPORT_PATH="rdw-test-results/${TIMESTAMP}_report.html"
+          REPORT_PATH="rdw-test-results/${TIMESTAMP}_report.html"  # Dynamically generate the path for the HTML report using a timestamp.
           newman run tests/rdw-test-collection.postman_collection.json -r html --reporter-html-export "${REPORT_PATH}"
-          echo "::set-output name=report_path::${REPORT_PATH}"
-        # This step runs the Postman collection using Newman and generates an HTML report, saving it to the rdw-test-results directory.
+          echo "::set-output name=report_path::${REPORT_PATH}"  # Save the path to the HTML report as an output variable.
+        # Run the Postman collection with Newman and generate an HTML report. Save the report path to an output variable.
 
       - name: Fetch all branches
         run: git fetch --all
-        # This step fetches all branches from the remote repository.
+        # Fetch all branches from the remote repository.
 
       - name: Switch to test-results branch
         run: git checkout test-results
-        # This step switches to the test-results branch.
+        # Switch to the test-results branch.
 
       - name: Configure Git
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-        # This step configures Git with a user email and name to identify the commit.
+        # Configure Git with a user email and name.
 
       - name: Push HTML report to test-results branch
         run: |
-          git add "${{ steps.run_postman.outputs.report_path }}"
-          git commit -m "Add Newman HTML report"
-          git push origin test-results
-        # This step adds the HTML report to the Git staging area, commits the changes with a message, and pushes the commit to the test-results branch.
+          REPORT_PATH="${{ steps.run_postman.outputs.report_path }}"  # Retrieve the path to the HTML report from the output variable.
+          git add "${REPORT_PATH}"  # Add the HTML report to the Git staging area.
+          git commit -m "Add Newman HTML report"  # Commit the HTML report.
+          git push origin test-results  # Push the commit to the test-results branch.
+        # Add, commit, and push the HTML report to the test-results branch.
