--- a/.github/workflows/run-postman-collection.yml
+++ b/.github/workflows/run-postman-collection.yml
@@ -18,20 +18,21 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '21'
-        # Set up Node.js version 21.
+          node-version: '20'
+        # Set up Node.js version 20.
 
       - name: Install Newman and HTML Reporter
         run: npm install -g newman newman-reporter-html
         # Install Newman and the HTML reporter globally.
 
       - name: Run Postman Collection and generate HTML report
+        id: run_postman
         run: |
           mkdir -p rdw-test-results
           TIMESTAMP=$(date +"%Y%m%d%H%M%S")
-          REPORT_PATH="rdw-test-results/${TIMESTAMP}_report.html"
-          $(npm root -g punycode)/bin/punycode newman run tests/rdw-test-collection.postman_collection.json -r html --reporter-html-export "${REPORT_PATH}"
-          echo "::set-output name=report_path::${REPORT_PATH}"
+          REPORT_PATH="rdw-test-results/${TIMESTAMP}_report.html"  # Dynamically generate the path for the HTML report using a timestamp.
+          newman run tests/rdw-test-collection.postman_collection.json -r html --reporter-html-export "${REPORT_PATH}"
+          echo "::set-output name=report_path::${REPORT_PATH}"  # Save the path to the HTML report as an output variable.
         # Run the Postman collection with Newman and generate an HTML report. Save the report path to an output variable.
 
       - name: Fetch all branches
