--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Run Robot Framework tests
       run: |
         # Run Robot Framework test located in the main directory
-        robot tests/api.robot
+        robot tests/rdw_test.robot
